[FIX] Z-index maintenance

--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -919,6 +919,7 @@ div.delay {
 
 div#message-maintain {
 	position: absolute;
+	z-index: 20;
 	top: 5px;
 	width: 100%;
 	opacity: 0.98;
